--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       content="Web site created using create-react-app"
     />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
     <title>Asen Sanjula | Portfolio</title>
     <style>
